[gd_scene load_steps=2 format=3 uid="uid://i5keaxlq7akp"]

[ext_resource type="Script" uid="uid://bofh8neu50jfx" path="res://ui/magic_card/magic_card.gd" id="1_cku5g"]

[node name="MagicCard" type="Control"]
custom_minimum_size = Vector2(64, 106)
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 96.0
script = ExtResource("1_cku5g")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.27451)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MagicTexture" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
expand_mode = 4

[node name="MagicName" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Bob"
horizontal_alignment = 2
vertical_alignment = 2
autowrap_mode = 2

[node name="MagicDescription" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 3
text = "一大串各种各样的说明文字，根本不期待有人能看明白"
autowrap_mode = 3
text_overrun_behavior = 3

[node name="BuyButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
text = "购买"

[connection signal="pressed" from="VBoxContainer/BuyButton" to="." method="_on_buy_button_pressed"]
